<resources>
    <string name="app_name">Survey</string>
    <string name="house_no">घर का नंबर</string>
    <string name="family_no">परिवार संख्या</string>
    <string name="family_member">सदस्यों का नाम</string>
    <string name="family_cast">जाती</string>
    <string name="family_education">शिक्षा</string>
    <string name="family_vayavshay">व्यवसाय</string>
    <string name="mobile_no">मोबाइल नंबर</string>
    <string name="submit">जमा करें</string>
    <string name="member_name">सदस्य का नाम</string>
    <string name="member_age">उमर</string>
    <string name="member_dob">जन्म तिथि</string>
    <string name="member_aadhar">आधार संख्या</string>
    <string name="cancel">रद्द करें</string>
    <string name="member_gender">लिंग</string>
    <string name="member_relation">मुखिया से संबंध</string>
    <string name="viaran">विवरन</string>
    <string-array name="gender_list">
        <item>लिंग चुनें</item>
        <item>पुरुष</item>
        <item>महिला</item>
    </string-array>
    <string-array name="relation_list">
        <item>मुखिया से संबंध चुनें</item>
        <item>स्वयं</item>
        <item>पिता</item>
        <item>मां</item>
        <item>पति</item>
        <item>पत्नी</item>
        <item>भाई</item>
        <item>बहन</item>
        <item>बेटा</item>
        <item>बेटी</item>
        <item>बहुॅ</item>
        <item>अन्य</item>
    </string-array>
    <string-array name="education_list">
        <item>शिक्षा का चयन करें</item>
        <item>स्नातक</item>
        <item>पोस्ट ग्रेजुएट</item>
        <item>मैट्रिक</item>
        <item>स्नातक के तहत</item>
        <item>निरक्षर</item>
    </string-array>
    <string-array name="female_type">
        <item>महिला प्रकार चुनें</item>
        <item>धत्री</item>
        <item>गर्भवती</item>
        <item>लड़की</item>
        <item>अन्य</item>
    </string-array>
    <string-array name="bussiness_type">
        <item>व्यवसाय चुनें</item>
        <item>निजी नौकरी</item>
        <item>सरकारी नौकरी</item>
        <item>मजदूर</item>
        <item>अन्य</item>
    </string-array>
    <string-array name="cast_type">
        <item>जाती चुनें</item>
        <item>वाल्मीकि</item>
        <item>जाटव</item>
        <item>मुस्लिम</item>
        <item>यादव</item>
        <item>ईसाई</item>
        <item>अन्य</item>
    </string-array>


</resources>
