<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/margin_30"
    android:layout_marginRight="@dimen/margin_30"
    android:layout_marginBottom="@dimen/margin_30"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edt_membername"
        style="@style/common_textview_small_with_border"
        android:layout_marginTop="@dimen/margin_10"
        android:tag="2">
        <EditText
            android:id="@+id/edt_membername"
            style="@style/common_textview_normal_app_color_singleline"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:hint="@string/member_name"
            android:inputType="text"
            android:imeOptions="actionDone"
            />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/member_gender_layout"
        style="@style/spinner_style"

        >

        <ImageView
            android:id="@+id/member_gender_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/down_arrow" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/member_gender_image"
            android:background="@color/grey" />

        <Spinner
            android:id="@+id/spinner_member_gender"
            style="@style/spinner_style_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:visibility="visible"
            android:entries="@array/gender_list"
            android:gravity="center_vertical"
            ></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/member_female_layout"
        style="@style/spinner_style"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/member_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/down_arrow" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/member_female"
            android:background="@color/grey" />

        <Spinner
            android:id="@+id/spinner_member_female"
            style="@style/spinner_style_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:visibility="visible"
            android:entries="@array/female_type"
            android:gravity="center_vertical"
            ></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/member_relation_layout"
        style="@style/spinner_style"
        android:visibility="visible"
        >

        <ImageView
            android:id="@+id/member_relation_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/down_arrow" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/member_relation_image"
            android:background="@color/grey" />

        <Spinner
            android:id="@+id/spinner_member_relation"
            style="@style/spinner_style_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:visibility="visible"
            android:entries="@array/relation_list"
            android:gravity="center_vertical"
            ></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/member_education_layout"
        style="@style/spinner_style"
        android:visibility="visible"
        >

        <ImageView
            android:id="@+id/member_education_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/down_arrow" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/member_education_image"
            android:background="@color/grey" />

        <Spinner
            android:id="@+id/spinner_education_relation"
            style="@style/spinner_style_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:visibility="visible"
            android:entries="@array/education_list"
            android:gravity="center_vertical"
            ></Spinner>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edt_memberage"
        style="@style/common_textview_small_with_border"
        android:layout_marginTop="@dimen/margin_10"
        android:tag="2">
        <EditText
            android:id="@+id/edt_memberage"
            style="@style/common_textview_normal_app_color_singleline"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:hint="@string/member_age"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:maxLength="2"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edt_memberdob"
        style="@style/common_textview_small_with_border"
        android:layout_marginTop="@dimen/margin_10"
        android:tag="2">
        <EditText
            android:id="@+id/edt_memberdob"
            style="@style/common_textview_normal_app_color_singleline"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:hint="@string/member_dob"
            android:inputType="text"

            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edt_memberaadhar"
        style="@style/common_textview_small_with_border"
        android:layout_marginTop="@dimen/margin_10"
        android:tag="2">
        <EditText
            android:id="@+id/edt_memberaadhar"
            style="@style/common_textview_normal_app_color_singleline"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:hint="@string/member_aadhar"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLength="16"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_10"
        >
        <Button
            android:id="@+id/btn_cancel"
            style="@style/common_button_layout_selected_appcolor"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text16size"
            android:layout_weight="1"
            android:visibility="visible"/>
        <Button
            android:id="@+id/btn_submit"
            style="@style/common_button_layout_selected_appcolor"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text16size"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_10"
            android:visibility="visible"/>
    </LinearLayout>
</LinearLayout></ScrollView>